--- a/main.css
+++ b/main.css
@@ -1,43 +1,68 @@
 html {
+    position: relative;
+    min-height: 100%;
+}
+html, body {
     font-family: Arial, Helvetica, sans-serif; 
+    margin: 0;
+    padding: 0;
 }
-
-body {
-margin: 0;
-
-}
-
 header {
-    background: blue;
+    /*background: #f7f7f7;*/
+    background: #bae5ff;
     box-shadow: 0 4px 2px -2px gray;
 }
-
 ul {
-    margin: 0% auto;
+    margin: 0% 10%;
     padding: 0%;
     position: absolute;
     bottom: 0px;
     width: 80%;
     height: 75%;
 }
-
-.content-wrapper {
-    margin: 1%;
+img {
+    max-width: 100%;
+}
+.wrapper {
+    height: 50%;
+    margin-bottom: 2em;
+}
+.content-articles {
+    margin: 10%;
+    width: 40%;
+    float: left;
 }
 .siteTitle {
     padding: .5% 0%;
     width: 100%;
     text-align: center;
     font-size: 175%;
-    color: white;
 }
 .navvy {
-    background:#f7f7f7;
     height: 35px;
     width: 100%;
     text-align: center;
     position: relative;
  
+}
+.side-content {
+    float: right;
+    margin: 10% 10% auto;
+    width: 20%;
+    padding-bottom: 3em;
+}
+footer {
+    color: grey;
+    margin-top: 5em;
+    font-size: 75%;
+    padding: 1em;
+    height: 1em;
+    background: #f7f7f7;
+    bottom: 0;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+
 }
 .navvy li {
     display: inline;
@@ -46,24 +71,15 @@ ul {
     height: 100%;
     float: left;
 }
-
 .navvy li:hover {
     border-bottom: blue solid 3px;
     cursor: pointer;
 }
-
 @media (max-width: 600px) {
-    .content-wrapper {
-        margin: 3%;
-    }
     .siteTitle {
         padding: 2%;
     }
-
-    ul {
-        margin: 1%;
+    .side-content, .content-articles {
+        width: inherit;
     }
-
-  
-
-}
+  }
