--- a/main.css
+++ b/main.css
@@ -14,12 +14,13 @@ header {
     box-shadow: 0 4px 2px -2px gray;
 }
 ul {
+    font-size: 125%;
     margin: 0% 10%;
-    padding: 0%;
+    padding: 1em 0;
     position: absolute;
     bottom: 0px;
     width: 80%;
-    height: 75%;
+    height: 1em;
 }
 img {
     max-width: 100%;
@@ -36,7 +37,8 @@ img {
     padding: .5% 0%;
     width: 100%;
     text-align: center;
-    font-size: 175%;
+    font-size: 200%;
+    font-family: 'Pacifico', cursive;
 }
 .navvy {
     height: 35px;
@@ -66,9 +68,8 @@ footer {
 }
 .navvy li {
     display: inline;
-    margin: 0%; 
     width: 25%; 
-    height: 100%;
+    height: 2em;
     float: left;
 }
 .navvy li:hover {
