--- a/main.css
+++ b/main.css
@@ -86,4 +86,9 @@ footer {
     .side-content, .content-articles {
         width: inherit;
     }
+
+    .side-content{
+        float: none;
+        text-align: center;
+    }
   }
