--- a/main.css
+++ b/main.css
@@ -10,10 +10,10 @@ html, body {
 }
 header {
     /*background: #f7f7f7;*/
-    background: #bae5ff;
+    background: #ff8e44;
     box-shadow: 0 4px 2px -2px gray;
 }
-ul {
+.navvy ul {
     font-size: 125%;
     margin: 0% 10%;
     padding: 1em 0;
@@ -27,10 +27,10 @@ img {
 }
 .wrapper {
     margin: auto 12.5% 2em;
-}
+    }
 .content-articles {
-    margin: 10%;
-    width: 40%;
+    margin: 3% auto;
+    width: 50%;
     float: left;
 }
 .siteTitle {
@@ -49,7 +49,7 @@ img {
 }
 .side-content {
     float: right;
-    margin: 10%;
+    margin: 5% auto;
     width: 20%;
     padding-bottom: 3em;
 }
@@ -78,7 +78,7 @@ footer {
 }
 @media (max-width: 600px) {
     .wrapper{
-        margin: auto;
+        margin: 7%;
     }
     .siteTitle {
         padding: 2% 0%;
